schema/testdata/errors/permission_action.keel
model Person {
    fields {
        identity Identity
    }

    actions {
        get getPerson(id) {
            // Invalid to provide actions inside an action
            @permission(
                //expect-error:17:24:AttributeArgumentError:unexpected argument 'actions' for @permission
                actions: [create],
                expression: true
            )
        }
        read customFunction(Any) returns (Any) {
            // Cannot use row-based permission inside a custom function
            //expect-error:37:43:AttributeArgumentError:cannot use row-based permissions in a read action
            @permission(expression: person.identity == ctx.identity)
        }
        read otherCustomFunction(Any) returns (Any) {
            // Cannot use row-based permission inside a custom function (RHS check)
            //expect-error:53:59:AttributeArgumentError:cannot use row-based permissions in a read action
            @permission(expression: ctx.identity == person.identity)
        }
    }
}
